k8s-monitoring/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s.rdkr.uk
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/hostname: k8s.rdkr.uk
spec:
  rules:
  - host: k8s.rdkr.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-operator-grafana
          servicePort: 80
